Fix Players legend to remove overlap
On narrow screens the description list text and description would overlap.
These are now displayed on separate lines.

--- a/public/stylesheets/bzflag.css
+++ b/public/stylesheets/bzflag.css
@@ -470,12 +470,8 @@ div.players dl {
 }
 
 div.players dl dt {
-  float: left;
   text-align: left;
   width: 10%;
-}
-
-div.players dl dd {
 }
 
 /* Styles for Player Search */
